basic frame i vibe coded lmao

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>e</h1>
+---
+layout: default
+title: Home
+description: Welcome to Study Tools
+---
+
+<div class="cards">
+  <div class="card">
+    <h3>Anki</h3>
+    <p>A powerful flashcard app for spaced repetition learning.</p>
+    <a href="https://apps.ankiweb.net/">Visit Anki</a>
+  </div>
+  <div class="card">
+    <h3>Quizlet</h3>
+    <p>Create and study flashcards, quizzes, and games.</p>
+    <a href="https://quizlet.com/">Visit Quizlet</a>
+  </div>
+  <div class="card">
+    <h3>Khan Academy</h3>
+    <p>Free online courses, lessons, and practice.</p>
+    <a href="https://www.khanacademy.org/">Visit Khan Academy</a>
+  </div>
+  <div class="card">
+    <h3>Pomodoro Timer</h3>
+    <p>A technique for focused work sessions.</p>
+    <a href="https://pomofocus.io/">Try Pomodoro Timer</a>
+  </div>
+  <div class="card">
+    <h3>Evernote</h3>
+    <p>Note-taking app for organizing your thoughts.</p>
+    <a href="https://evernote.com/">Visit Evernote</a>
+  </div>
+  <div class="card">
+    <h3>Notion</h3>
+    <p>All-in-one workspace for notes, tasks, and databases.</p>
+    <a href="https://www.notion.so/">Visit Notion</a>
+  </div>
+</div>
