--- a/index.html
+++ b/index.html
@@ -1,38 +1,131 @@
 ---
 layout: default
 title: Home
-description: Welcome to Study Tools
+description: Welcome to Study Tools - Your ultimate resource for effective studying
 ---
 
-<div class="cards">
-  <div class="card">
-    <h3>Anki</h3>
-    <p>A powerful flashcard app for spaced repetition learning.</p>
-    <a href="https://apps.ankiweb.net/">Visit Anki</a>
+<section id="intro">
+  <h2>Welcome to Study Tools</h2>
+  <p>Discover a curated collection of tools and resources to enhance your learning experience. Whether you're preparing for exams, learning new skills, or managing your study time, we've got you covered.</p>
+</section>
+
+<section id="flashcards">
+  <h2>Flashcard Tools</h2>
+  <p>Master concepts with spaced repetition and interactive flashcards.</p>
+  <div class="cards">
+    <div class="card">
+      <h3>Anki</h3>
+      <p>A powerful flashcard app for spaced repetition learning.</p>
+      <a href="https://apps.ankiweb.net/">Visit Anki</a>
+    </div>
+    <div class="card">
+      <h3>Quizlet</h3>
+      <p>Create and study flashcards, quizzes, and games.</p>
+      <a href="https://quizlet.com/">Visit Quizlet</a>
+    </div>
+    <div class="card">
+      <h3>Cram</h3>
+      <p>Flashcards and study guides for efficient learning.</p>
+      <a href="https://www.cram.com/">Visit Cram</a>
+    </div>
   </div>
-  <div class="card">
-    <h3>Quizlet</h3>
-    <p>Create and study flashcards, quizzes, and games.</p>
-    <a href="https://quizlet.com/">Visit Quizlet</a>
+</section>
+
+<section id="note-taking">
+  <h2>Note-Taking Apps</h2>
+  <p>Organize your thoughts and keep track of important information.</p>
+  <div class="cards">
+    <div class="card">
+      <h3>Evernote</h3>
+      <p>Note-taking app for organizing your thoughts.</p>
+      <a href="https://evernote.com/">Visit Evernote</a>
+    </div>
+    <div class="card">
+      <h3>Notion</h3>
+      <p>All-in-one workspace for notes, tasks, and databases.</p>
+      <a href="https://www.notion.so/">Visit Notion</a>
+    </div>
+    <div class="card">
+      <h3>OneNote</h3>
+      <p>Digital notebook for capturing and organizing notes.</p>
+      <a href="https://www.onenote.com/">Visit OneNote</a>
+    </div>
   </div>
-  <div class="card">
-    <h3>Khan Academy</h3>
-    <p>Free online courses, lessons, and practice.</p>
-    <a href="https://www.khanacademy.org/">Visit Khan Academy</a>
+</section>
+
+<section id="time-management">
+  <h2>Time Management</h2>
+  <p>Boost productivity with timers and focus techniques.</p>
+  <div class="cards">
+    <div class="card">
+      <h3>Pomodoro Timer</h3>
+      <p>A technique for focused work sessions.</p>
+      <a href="https://pomofocus.io/">Try Pomodoro Timer</a>
+    </div>
+    <div class="card">
+      <h3>Forest</h3>
+      <p>Stay focused and grow virtual trees while studying.</p>
+      <a href="https://www.forestapp.cc/">Visit Forest</a>
+    </div>
+    <div class="card">
+      <h3>Focus@Will</h3>
+      <p>Music designed to improve concentration.</p>
+      <a href="https://www.focusatwill.com/">Visit Focus@Will</a>
+    </div>
   </div>
-  <div class="card">
-    <h3>Pomodoro Timer</h3>
-    <p>A technique for focused work sessions.</p>
-    <a href="https://pomofocus.io/">Try Pomodoro Timer</a>
+</section>
+
+<section id="online-courses">
+  <h2>Online Learning Platforms</h2>
+  <p>Access free and paid courses from top educators.</p>
+  <div class="cards">
+    <div class="card">
+      <h3>Khan Academy</h3>
+      <p>Free online courses, lessons, and practice.</p>
+      <a href="https://www.khanacademy.org/">Visit Khan Academy</a>
+    </div>
+    <div class="card">
+      <h3>Coursera</h3>
+      <p>Online courses from universities and companies.</p>
+      <a href="https://www.coursera.org/">Visit Coursera</a>
+    </div>
+    <div class="card">
+      <h3>edX</h3>
+      <p>High-quality courses from top universities.</p>
+      <a href="https://www.edx.org/">Visit edX</a>
+    </div>
   </div>
-  <div class="card">
-    <h3>Evernote</h3>
-    <p>Note-taking app for organizing your thoughts.</p>
-    <a href="https://evernote.com/">Visit Evernote</a>
+</section>
+
+<section id="other-tools">
+  <h2>Other Useful Tools</h2>
+  <p>Additional resources for language learning, writing, and more.</p>
+  <div class="cards">
+    <div class="card">
+      <h3>Duolingo</h3>
+      <p>Fun language learning app.</p>
+      <a href="https://www.duolingo.com/">Visit Duolingo</a>
+    </div>
+    <div class="card">
+      <h3>Grammarly</h3>
+      <p>AI-powered writing assistant.</p>
+      <a href="https://www.grammarly.com/">Visit Grammarly</a>
+    </div>
+    <div class="card">
+      <h3>Wolfram Alpha</h3>
+      <p>Computational knowledge engine for math and science.</p>
+      <a href="https://www.wolframalpha.com/">Visit Wolfram Alpha</a>
+    </div>
   </div>
-  <div class="card">
-    <h3>Notion</h3>
-    <p>All-in-one workspace for notes, tasks, and databases.</p>
-    <a href="https://www.notion.so/">Visit Notion</a>
-  </div>
-</div>
+</section>
+
+<section id="tips">
+  <h2>Study Tips</h2>
+  <ul>
+    <li><strong>Active Recall:</strong> Test yourself on the material instead of just re-reading.</li>
+    <li><strong>Spaced Repetition:</strong> Review information at increasing intervals.</li>
+    <li><strong>Pomodoro Technique:</strong> Work for 25 minutes, then take a 5-minute break.</li>
+    <li><strong>Mind Mapping:</strong> Visualize connections between concepts.</li>
+    <li><strong>Healthy Habits:</strong> Get enough sleep, eat well, and exercise regularly.</li>
+  </ul>
+</section>
